--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -13,6 +13,13 @@ jobs:
       uses: actions/setup-python@v1
       with:
         python-version: 3.7
+    - name: Add Key to Clone Private Repos
+      env:
+        DEPLOY_KEY: ${{ secrets.FRACDIFF_DEPLOYKEY }}
+        GIT_SSH_COMMAND: "ssh -o StrictHostKeyChecking=no"
+      run: |
+        eval "$(ssh-agent -s)"
+        ssh-add - <<< "${DEPLOY_KEY}"      
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
