--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -17,7 +17,7 @@ jobs:
       uses: ./
       with:
         ssh-private-key: ${{ secrets.FRACDIFF_DEPLOYKEY }}
-      run: |
+    - run: |
         sh-add -l
         echo SSH_AUTH_SOCK is at $SSH_AUTH_SOCK     
     - name: Install dependencies
