--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,12 @@
+# Access private packages on gemfury
+--index-url https://${FURY_AUTH}:@pypi.fury.io/kmedian/
+
+# pypi packages
 flake8>=3.7.8
 pytest>=5.3.1
 numpy>=1.14.5
 scipy>=1.3.3
 statsmodels>=0.10.2
--e git+git@github.com:ulf1/fracdiff.git#egg=fracdiff
+
+# private fury/kmedian packages
+fracdiff>=0.1.1
