--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,16 @@
-# Access private packages on gemfury
---index-url https://${FURY_AUTH}:@pypi.fury.io/kmedian/
+# syntax check, unit test, profiling
+flake8>=3.7.*
+pytest>=5.3.*
+twine>=3.1.*
 
 # pypi packages
-flake8>=3.7.8
-pytest>=5.3.1
-numpy>=1.14.5
-scipy>=1.3.3
-statsmodels>=0.10.2
+numpy>=1.18.*
+scipy>=1.4.*
+statsmodels>=0.11.*
+numpy-fracdiff>=0.3.1
 
-# private fury/kmedian packages
-fracdiff>=0.1.1
+# Jupyter
+jupyterlab>=1.2.*
+matplotlib>=3.1.*
+quandl>=3.5.*
+pandas>=1.0.*
